# marunage2

./: .dockerignore  .editorconfig  .env.example  .gitignore  .tdd_protocol.md.template  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.test.yml  init.sql  pyproject.toml  update_protocol.py
.github/: copilot-instructions.md
docs/: phase1-basic-design.md  phase2-destructive-test-design.md  phase3-container-auth-design.md  phase3-destructive-test-design.md  phase4-llm-integration-design.md  phase4-llm-integration-destructive-test-design.md  phase5-artifact-apply-design.md  phase5-artifact-apply-destructive-test-design.md  phase6-direct-edit-design.md  phase6-direct-edit-destructive-test-design.md  phase6-orchestration-design.md  phase6-orchestration-destructive-test-design.md  phase7-compose-validation-design.md  phase7-compose-validation-destructive-test-design.md  phase7-dind-sandbox-design.md  phase7-dind-sandbox-destructive-test-design.md
scripts/: README-runtime.txt  entrypoint.sh  gh_token_compose.py  healthcheck.py  init_runtime.sh  run_all_tests.sh  service_runner.py
src/backend/: __init__.py  contracts.py  database.py  dind_manager.py  llm_client.py  phase_orchestrator.py  repository_workspace.py  state_machine.py  (+2 more)
tests/: conftest.py  test_artifact_apply.py  test_compose_validation.py  test_dashboard_interactive.py  test_dashboard_ui.py  test_dind_manager.py  test_integration_mariadb.py  test_librarian.py  test_llm_client.py  test_phase3_container_auth.py  test_security.py  test_security_recovery.py  test_self_repair.py  test_worker_engine.py
(+12 files in other folders)
