[build-system]
requires = ["setuptools==80.10.2", "wheel==0.46.1"]
build-backend = "setuptools.build_meta"

[project]
name = "marunage2"
version = "0.1.0"
description = "Maru-nage v2 orchestration and security runtime"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "mariadb==1.1.14",
  "nh3==0.3.3",
  "PyMuPDF==1.27.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "/tmp/pytest-cache"
markers = [
  "integration: requires a live MariaDB instance",
]